--- a/iRAWD-ATS_Stephens21/D-vr-FV-compare.html
+++ b/iRAWD-ATS_Stephens21/D-vr-FV-compare.html
@@ -13077,7 +13077,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Bottom-panel-of-Dig-1-in-Stephens+-2020">Bottom panel of Dig 1 in Stephens+ 2020<a class="anchor-link" href="#Bottom-panel-of-Dig-1-in-Stephens+-2020">&#182;</a></h1>
+<h1 id="Bottom-panel-of-Dig-1-in-Stephens+-2020">Bottom panel of Fig 1 in Stephens+ 2020<a class="anchor-link" href="#Bottom-panel-of-Dig-1-in-Stephens+-2020">&#182;</a></h1>
 </div>
 </div>
 </div>
